<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VOM(나만의 의미찾기)</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="url_join">http://mean1.cloudapp.net/api/api_userJoinProc.php</string>
    <string name="url_login">http://mean1.cloudapp.net/api/api_userLogin.php</string>
    <string name="url_get_question">http://mean1.cloudapp.net/api/api_requestionInfo.php</string>
    <string name="url_get_questions">http://mean1.cloudapp.net/api/api_requestionList.php</string>
    <string name="desc_star_image">Constellation Image</string>
    <string name="vom">VOM</string>
    <string name="vom_long">Voice of Mind</string>

    <!-- 처음 로고화면의 타이틀 -->
    <string name="loading_title1">내 마음을 봄&#8230;</string>
    <string name="loading_title2">스스로에게 물어 봄&#8230;</string>
    <string name="loading_title3">세상을 바라 봄&#8230;</string>

    <!-- 로그인 화면 -->
    <string name="ok">확인</string>
    <string name="emailStr">이메일</string>
    <string name="passwordStr">비밀번호</string>
    <string name="join">안녕? 처음 만나 :)</string>
    <string name="login">로그인</string>
    <string name="login_wait">로그인 중입니다. 잠시만 기다려주십시오.</string>
    <string name="login_fail_msg">아이디와 패스워드 오류입니다. 다시 한 번 확인해주세요.</string>

    <!-- 가입 화면 -->
    <string name="hello">Hello :-)</string>
    <string name="nicetomeetyou">Nice to meet you!</string>
    <string name="next">다음</string>
    <string name="name_title1">안녕! 반가워! 내 이름은 </string>
    <string name="name_title2">VOM</string>
    <string name="name_title3">이야 :)</string>
    <string name="name_title4">네 이름은 뭐야? (최대 32자)</string>
    <string name="birth_title1">생일은?</string>
    <string name="sex_title">성별은?</string>
    <string name="sex_male">남</string>
    <string name="sex_female">여</string>
    <string name="email_title1">네가 적은 내용을 안전하게 보관할 수 있게 하고싶어.</string>
    <string name="email_title2">e-mail 주소를 알려줄래?</string>
    <string name="password_title1">이메일과 함께 사용할 비밀번호도 적어줘.(8자 이상)</string>
    <string name="password_title2">비밀번호</string>
    <string name="password_title3">비밀번호 확인</string>
    <string name="join_success">회원 등록 성공!</string>
    <string name="join_longname">이름의 글자수가 다릅니다. 32자 이하</string>
    <string name="join_wrong_email">이메일 정규식이 틀렸습니다.</string>
    <string name="join_email_dup">이메일 중복.</string>
    <string name="join_query_error">회원가입 insert query 에러.</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    
    <!-- Setting Activity -->
    <string name="notice1">1차 알림</string>
    <string name="notice2">2차 알림</string>
    <string name="set_notice_plz">알림시간을 설정해주세요</string>
    <string name="logout">로그아웃</string>
    <string name="close">닫기</string>
    <string name="title_setting">설정</string>
    <string name="title_setting_en">Settings</string>
    <string name="question_notice_time">질문 알림 시간</string>
    <string name="vib_desc">알림 시 진동 울림</string>

    <!-- Notification Dialog -->
    <string name="noti_message">물어볼 게 있어 :)</string>
    <string name="noti_yes">뭔데?</string>
    <string name="noti_no">이따가…</string>
    <string name="btn_goto_question">오늘 질문에 답하러 가기</string>

</resources>