<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".JoinActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:background="@drawable/navi_bg"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:text="@string/hello"
            android:textColor="#7aebf6"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="35dp"
            android:text="@string/nicetomeetyou"
            android:textColor="#454545"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_join_submit"
            style="@style/VomButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:layout_marginTop="5dip"
            android:background="@drawable/navi_btn"
            android:singleLine="false"
            android:text="@string/next" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/join_layout_wrap"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_title1"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/name_title2"
                        android:textColor="#5eb4d7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_title3"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_title4"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <EditText
                    android:id="@+id/name"
                    style="@style/VomEditTextStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:hint="@string/name_title4"
                    android:inputType="textPersonName"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="#aaaaaa" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/birth_title1"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/textView_join_birthday"
                        style="@style/VomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/input"
                        android:hint="@string/birth_title1"
                        android:padding="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex_title"
                        android:textColor="#ffffff" />

                    <RadioGroup
                        android:id="@+id/radioGroup_join_sex"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2" >

                        <RadioButton
                            android:id="@+id/radio_sex_male"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sex_male"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/radio_sex_female"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sex_female"
                            android:textColor="@color/white" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_title1"
                        android:textColor="#ffffff" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_title2"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <EditText
                    android:id="@+id/email"
                    style="@style/VomEditTextStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:hint="@string/email_title2"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColorHint="#aaaaaa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_title1"
                    android:textColor="#ffffff" />

                <EditText
                    android:id="@+id/pwd"
                    style="@style/VomEditTextStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password_title2"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:padding="8dp"
                    android:textColorHint="#aaaaaa" />

                <EditText
                    android:id="@+id/pwd_confirm"
                    style="@style/VomEditTextStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password_title3"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:padding="8dp"
                    android:textColorHint="#aaaaaa" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>