<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_general"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/join_layout_wrap"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/navi_bg"
            android:padding="10dp" >

            <Button
                android:id="@+id/button_cancle"
                style="@style/VomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_marginTop="5dip"
                android:background="@drawable/navi_btn"
                android:singleLine="false"
                android:text="@string/cancel"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/get_star_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/vom"
                android:textColor="@color/vom_sky"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/get_star_name_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="35dp"
                android:text="@string/vom_long"
                android:textColor="@color/vom_gray"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_join_submit"
                style="@style/VomButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="false"
                android:layout_marginTop="5dip"
                android:background="@drawable/navi_btn"
                android:singleLine="false"
                android:text="@string/save"
                android:textColor="#ffffff" />

        </RelativeLayout>

        <ScrollView 
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            

            <LinearLayout
                android:id="@+id/question_title_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="1dp"
                android:weightSum="1" >

                <ImageView
                    android:id="@+id/question_get_star_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/desc_star_image"
                    android:scaleType="fitXY"
                    android:src="#ff2345"
                    android:visibility="invisible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/question_get_title"
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:textColor="@color/vom_white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/get_answer_text"
                        style="@style/VomEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textMultiLine"
                        android:minHeight="10dp"
                        android:scrollHorizontally="false"
                        android:textCursorDrawable="@null"
                        android:textSize="15sp" >

                        <requestFocus />
                    </EditText>

                </LinearLayout></LinearLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>