<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_intro"
    tools:context=".LogoActivity" >

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:background="@drawable/logo_beta" />

    <RelativeLayout
        android:id="@+id/loading_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/loadingTitle"
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="180dp"
            android:gravity="center"
            android:text="@string/loading_title1"
            android:textColor="@color/vom_white" />

    </RelativeLayout>

    <!-- Login form -->

    <LinearLayout
        android:id="@+id/loginFormLayout"
        style="@style/LoginFormContainer"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="80dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:visibility="visible" >

        <!-- 아이디 입력창 -->

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/email"
                style="@style/VomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:hint="@string/emailStr"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColorHint="@color/vom_gray"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/user_id_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dip"
                android:src="@drawable/btn_edittext_clear"
                android:visibility="invisible" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/password"
                style="@style/VomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:hint="@string/passwordStr"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColorHint="@color/vom_gray"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/user_pw_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dip"
                android:src="@drawable/btn_edittext_clear"
                android:visibility="invisible" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_sign_up"
                style="@style/VomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="left"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/join"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_login"
                style="@style/VomButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="right"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/login"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >
    </LinearLayout>

</FrameLayout>